--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 ul li {
     list-style: none;
-    padding: 0;
 }
 body{
     margin: 0;
@@ -436,7 +435,7 @@ main{
     text-decoration: none;
     color: black;
 }
-.content-footer ul{
+.content-footer, .content-footer-left ul{
     padding: 0;
 }
 
