--- a/style.css
+++ b/style.css
@@ -510,9 +510,6 @@ main{
     .fa-search{
         color: white;
     }
-    .search{
-        justify-content: center;
-    }
     .search-bar{
         margin-bottom: 20px;
     }
@@ -638,6 +635,10 @@ main{
     }
     .content-footer{
         width: 100%;
+        padding-left: 30px;
+    }
+    .content-footer-left{
+        width: 100%;
     }
     .footer-h3{
         margin: 0;
@@ -655,6 +656,15 @@ main{
     .hebergement{
         flex-direction: column-reverse;
     }
+    .titre-hebergement{
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+    }
+    .btn-afficher-plus{
+        display: flex;
+        justify-content: center;
+    }
     .block-card-hebergement{
         width: 100%;
     }
@@ -662,9 +672,19 @@ main{
         width: 100%;
         margin-bottom: 50px;
     }
+    .titre-populaire{
+        justify-content: space-between;
+        width: 80%;
+        margin: auto;
+    }
                                                                     /* activiter pour la partit tablette */
     .activite{
         flex-direction: column;
+    }
+    .titre-activiter{
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
     }
     .conteneur-activite{
         flex-direction: column;
@@ -672,11 +692,11 @@ main{
     }
     .child-1 {
         margin: auto;
-        width: 75%;
+        width: 70%;
     }
     .child-2{
         margin: auto;
-        width: 75%;
+        width: 70%;
     }
     .img-large{
         height: 125px;
